# aWebSite

./: .env.example  .gitignore  compile_mo.py  db.sqlite3  fix_sphinx.py  fix_sphinx2.py  fix_stt.py  fix_views.py  gen_en_posts.py  gen_multi_posts.py  gen_posts.py  pyproject.toml  requirements.txt  test_db.sqlite3
.claude/: settings.local.json
accounts/: admin.py  api.py  models.py  scale_ocr.py  views.py
accounts/migrations/: 0001_initial.py  0002_post.py  0003_userprofile_role.py  0004_comment.py  0005_alter_comment_options_comment_parent.py  0006_comment_audio_alter_comment_content.py  0007_bodymeasurement.py  0008_alter_bodymeasurement_basal_metabolism_kcal_and_more.py
miniprogram/: app.js  app.json  app.wxss  project.config.json
miniprogram/utils/: api.js
scripts/: fix_audio.py  generate_docs.py
static/css/: style.css
templates/accounts/: comment_item.html  emoji_picker.html  fitness_stats.html  home.html  language_switcher.html  login.html  pagination.html  post_create.html  post_detail.html  post_list.html  received_comments.html  register.html  success.html  timezone_js.html  translate_js.html  user_edit.html  user_manage.html  voice_js.html  weight_data.html
test_dir/: conftest.py  pytest.ini  test_scenarios.py
test_dir/features/: admin.feature  authentication.feature  dashboard.feature  navigation.feature  posts.feature  weight-data.feature
test_dir/steps/: admin_steps.py  auth_steps.py  common_steps.py  conftest.py  dashboard_steps.py  nav_steps.py  post_steps.py  weight_steps.py
web_project/: settings.py  urls.py
(+25 files in other folders)
